--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "phone-formatter": "^0.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-grid-system": "^7.0.3",
     "react-redux": "^7.1.3",
     "react-responsive": "^8.1.0",
     "react-scripts": "3.4.3",
