--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "mapbox-gl": "^1.12.0",
     "phone-formatter": "^0.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-grid-system": "^7.0.3",
+    "react-mapbox-gl": "^4.8.6",
     "react-redux": "^7.1.3",
     "react-responsive": "^8.1.0",
     "react-scripts": "3.4.3",
