--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "framer": "^1.2.5",
+    "framer-motion": "^2.6.6",
     "mapbox-gl": "^1.12.0",
     "phone-formatter": "^0.0.2",
     "react": "^16.13.1",
