--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "framer": "^1.2.5",
     "framer-motion": "^2.6.6",
+    "history": "^5.0.0",
     "mapbox-gl": "^1.12.0",
     "phone-formatter": "^0.0.2",
     "react": "^16.13.1",
